cmake_minimum_required(VERSION 3.22)
project(learning2)

set(CMAKE_CXX_STANDARD 14)

add_executable(learning2 main.cpp exe1094.cpp exe388.cpp exe76.cpp exe567.cpp exe438.cpp exe3.cpp binarysearch.cpp exe587.cpp exe398.cpp exe937.cpp exe713.cpp exe944.cpp exe0105.cpp exe503.cpp exe239.cpp listtest.cpp ospv.cpp exe658.cpp zhousai.cpp codeforce.cpp exe1024.cpp)

add_executable(exe1094 exe1094.cpp)
add_executable(main main.cpp)
add_executable(exe76 exe76.cpp)
add_executable(exe567 exe567.cpp)
add_executable(exe438 exe438.cpp)
add_executable(exe3 exe3.cpp)
add_executable(binarysearch binarysearch.cpp)
add_executable(exe587 exe587.cpp)
add_executable(exe398 exe398.cpp)
add_executable(exe937 exe937.cpp)
add_executable(exe713 exe713.cpp)
add_executable(exe944 exe944.cpp)
add_executable(exe0105 exe0105.cpp)
add_executable(exe503 exe503.cpp)
add_executable(exe239 exe239.cpp)
add_executable(listtest listtest.cpp)
add_executable(exe658 exe658.cpp)
add_executable(zhousai zhousai.cpp)
add_executable(codeforce codeforce.cpp)
add_executable(exe1024 exe1024.cpp)