cmake_minimum_required(VERSION 3.22)
project(learning2)

set(CMAKE_CXX_STANDARD 14)

add_executable(learning2 main.cpp exe1094.cpp exe388.cpp exe76.cpp exe567.cpp exe438.cpp exe3.cpp binarysearch.cpp exe587.cpp exe398.cpp exe937.cpp exe713.cpp exe944.cpp exe0105.cpp exe503.cpp exe239.cpp listtest.cpp ospv.cpp exe658.cpp zhousai.cpp codeforce.cpp exe1024.cpp exe1475.cpp exe687.cpp warmup.cpp exe1592.cpp "shuangzhousai .cpp" exe670.cpp LRU.cpp Tencenttest.cpp exe160.cpp heapsort.cpp exe698.cpp multithread.cpp exe85.cpp exe1652.cpp exe54.cpp exe151.cpp exe452.cpp exe209.cpp exe15.cpp exe560.cpp exe17_19.cpp exe86.cpp exe78.cpp shared_ptrtest.cpp exe870.cpp exe856.cpp exe801.cpp exe940.cpp test131.cpp exe886.cpp exe41.cpp exe1700.cpp exe23.cpp exe31.cpp exe143.cpp exe915.cpp exe1.cpp)

add_executable(exe1094 exe1094.cpp)
add_executable(main main.cpp)
add_executable(exe76 exe76.cpp)
add_executable(exe567 exe567.cpp)
add_executable(exe438 exe438.cpp)
add_executable(exe3 exe3.cpp)
add_executable(binarysearch binarysearch.cpp)
add_executable(exe587 exe587.cpp)
add_executable(exe398 exe398.cpp)
add_executable(exe937 exe937.cpp)
add_executable(exe713 exe713.cpp)
add_executable(exe944 exe944.cpp)
add_executable(exe0105 exe0105.cpp)
add_executable(exe503 exe503.cpp)
add_executable(exe239 exe239.cpp)
add_executable(listtest listtest.cpp)
add_executable(exe658 exe658.cpp)
add_executable(zhousai zhousai.cpp)
add_executable(codeforce codeforce.cpp)
add_executable(exe1024 exe1024.cpp)
add_executable(exe1475 exe1475.cpp)
add_executable(warmup warmup.cpp)
add_executable(exe1592 exe1592.cpp)
add_executable(shuangzhousai  "shuangzhousai .cpp")
add_executable(exe670 exe670.cpp)
add_executable(LRU LRU.cpp)
add_executable(Tencenttest Tencenttest.cpp)
add_executable(exe160 exe160.cpp)
add_executable(heapsort heapsort.cpp)
add_executable(exe698 exe698.cpp)
add_executable(multithread multithread.cpp)
add_executable(exe85 exe85.cpp)
add_executable(exe1652 exe1652.cpp)
add_executable(exe54 exe54.cpp)
add_executable(exe151 exe151.cpp)
add_executable(exe452 exe452.cpp)
add_executable(exe209 exe209.cpp)
add_executable(exe15 exe15.cpp)
add_executable(exe560 exe560.cpp)
add_executable(exe17_19 exe17_19.cpp)
add_executable(exe86 exe86.cpp)
add_executable(exe78 exe78.cpp)
add_executable(shared_ptrtest shared_ptrtest.cpp)
add_executable(exe870 exe870.cpp)
add_executable(exe856 exe856.cpp)
add_executable(exe801 exe801.cpp)
add_executable(exe940 exe940.cpp)
add_executable(test131 test131.cpp)
add_executable(exe886 exe886.cpp)
add_executable(exe41 exe41.cpp)
add_executable(exe1700 exe1700.cpp)
add_executable(exe23 exe23.cpp)
add_executable(exe31 exe31.cpp)
add_executable(exe143 exe143.cpp)
add_executable(exe915 exe915.cpp)
add_executable(exe1 exe1.cpp)